feat: First SQL steps, openAPI improvements, folder restructure
