# openapi.yaml
@@ -17,17 +17,18 @@ paths:
       operationId: login
       tags:
         - login
+      security: []
       parameters:
         - name: league
           in: header
-          description: The user''s league name
+          description: 'The user''s league name'
           required: true
           schema:
             type: string
         - name: password
           in: header
           required: true
-          description: The user''s password
+          description: 'The user''s password'
           schema:
             type: string
       responses:
@@ -38,24 +39,24 @@ paths:
               schema:
                 type: string
         '401':
-          description: Invalid user/password combination
+          description: Access token is missing or invalid
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Error"
+                $ref: "#/components/schemas/UnauthorizedError"
         default:
           description: unexpected error
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
-  /create:
+  /league:
     post:
       summary: Creates a new league
       operationId: createLeague
       tags:
-        - create
         - league
+      security: []
       parameters:
         - name: password
           in: header
@@ -64,9 +65,11 @@ paths:
           schema:
             type: string
             format: password
+            minLength: 6
+            maxLength: 100
         - name: email
           in: header
-          description: Administrator email, used for issuing a new password
+          description: Administrator email
           required: false
           schema:
             type: string
@@ -82,7 +85,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#components/schemas/League"
+                $ref: "#components/schemas/DetailedLeague"
         '400':
           description: Bad Request
           content:
@@ -104,7 +107,7 @@ paths:
       parameters:
         - name: leagueName
           in: path
-          description: The league''s name
+          description: 'The league''s name'
           required: true
           schema:
             type: string
@@ -115,6 +118,45 @@ paths:
             application/json:
               schema:
                 $ref: "#components/schemas/League"
+        '401':
+          description: Access token is missing or invalid
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/UnauthorizedError"
+        default:
+          description: Unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+  /admin/league/{leagueName}:
+    get:
+      summary: Admin information for a League
+      operationId: adminGetLeague
+      tags:
+        - league
+        - admin
+      parameters:
+        - name: leagueName
+          in: path
+          description: 'The league''s name'
+          required: true
+          schema:
+            type: string
+      reponses:
+        '200':
+          description: Detailed league information
+          content:
+            application/json:
+              schema:
+                $ref: "#components/schemas/DetailedLeague"
+        '401':
+          description: Access token is missing or invalid
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/UnauthorizedError"
         default:
           description: Unexpected error
           content:
@@ -131,13 +173,13 @@ paths:
       parameters:
         - name: leagueName
           in: path
-          description: The league''s name
+          description: 'The league''s name'
           required: true
           schema:
             type: string
         - name: dci
           in: path
-          description: The user''s dci
+          description: 'The user''s dci'
           required: true
           schema:
             type: integer
@@ -149,6 +191,18 @@ paths:
             application/json:
               schema:
                 $ref: "#components/schemas/User"
+        '401':
+          description: Access token is missing or invalid
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/UnauthorizedError"
+        '403':
+          description: Not enough rights
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
         default:
           description: Unexpected error
           content:
@@ -185,9 +239,7 @@ components:
   schemas:
     User:
       description: A representation of an user
-      required:
-        - dci
-        - name
+      type: object
       properties:
         dci:
           type: integer
@@ -205,10 +257,10 @@ components:
                 type: integer
                 format: int32
                 minimum: 1
-                description: The user''s overall ranking.
+                description: 'The user''s overall ranking.'
               played_matches:
                 type: object
-                description: Detailed info about the user''s wins and losses
+                description: 'Detailed info about the user''s wins and losses'
                 properties:
                   wins:
                     description: List of defeated users in a match, identified by DCI number
@@ -229,11 +281,15 @@ components:
                       type: integer
                       format: int32
     Users:
-      type: array
-      items:
-        $ref: "#/components/schemas/User"
+      type: object
+      properties:
+        users:
+          type: array
+          items:
+            $ref: "#/components/schemas/User"
     League:
       description: Information about a League
+      type: object
       properties:
         created_at:
           description: When the league was created
@@ -247,6 +303,31 @@ components:
           type: array
           items:
             $ref: "#components/schemas/User"
+    DetailedLeague:
+      description: Admin information for a league
+      allOf:
+      - $ref: '#/components/schemas/League'
+      - type: object
+        properties:
+          email:
+            description: admin email
+            type: string
+            format: email
+          user_password:
+            description: password to allow user access to the league
+            type: string
+            format: password
+    UnauthorizedError:
+      description: Access token is missing or invalid
+      required:
+        - code
+        - message
+      properties:
+        code:
+          type: integer
+          format: int32
+        message:
+          type: string
     Error:
       required:
         - code
@@ -257,3 +338,10 @@ components:
           format: int32
         message:
           type: string
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
+security:
+  - bearerAuth: []
