# src/routes/router.js
@@ -2,7 +2,7 @@ const Router = require("koa-router");
 const koaBody = require("koa-body")();
 
 const login = require("./login");
-const createLeague = require("./create-league");
+const createLeague = require("./league/post.league");
 
 const router = new Router();
 
@@ -11,7 +11,7 @@ router.post("/login", koaBody, login);
 router.post("/league", koaBody, createLeague);
 
 // if the user is logged in the object ctx.state.user will be initialised
-function home(ctx, next) {
+function home(ctx /*, next*/) {
   ctx.body = "MLA API";
 }
 
